# prometheus-gpsd

./: Cargo.toml  gpsd-prometheus.service
src/: main.rs
