[package]
name = "gpsd-prometheus"
version = "0.1.0"
edition = "2021"

[dependencies]
gpsd_proto = "1"
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
# termion = "3"

[package.metadata.deb]
maintainer = "David Campbell <dcampbell24@gmail.com>"
assets = [
    ["target/release/gpsd-prometheus", "usr/bin/", "755"],
    ["gpsd-prometheus.service", "etc/systemd/system/", "755"],
]
